# URC_NAV

./: README.md
point clouds/: calibration.yaml  mars.bt  octomap.bt  ply.py
rover_controller/: CMakeLists.txt  package.xml
rover_controller/src/: rover_searcher.cpp
rover_gazebo/launch/: gazebo.launch.py
rover_gazebo/launch/include/: rtabmap.launch.py  spawn.launch.py
rover_gazebo/rviz/: default.rviz  urc_bot.rviz
rover_localization/config/: ekf.yaml
rover_localization/launch/: localization.launch.py  rgbd_odometry.launch.py  rtabmap.launch.py
urc_rover/: CMakeLists.txt  package.xml
urc_rover/launch/: rsp.launch.py
urc_rover/maps/: mars.pgm  mars.yaml  mars_map.pgm  mars_map.yaml
